


DescTools 0.99.42 (2021-06-09)
------------------------------

NEW FUNCTIONS ADDED:
  * PlotDotCI() is a convenience interface for PlotDot() to plot group-wise 
    confidence intervals.

UPDATED FUNCTIONS:
  * AUC() has been gently revised.  (...but can't be published before package 
    sobir is updated.
  
BUGFIXES:
  * PlotDot() did not calculate correctly the left margin. In this connection
    two more arguments have been introduced: automar and gshift.
  * StrExtractBetween() did not use the first match for the left boundary.  





DescTools 0.99.41 (2021-04-09)
------------------------------

NEW FUNCTIONS ADDED:
  * NAIf() replaces a vector of elements by NAs. 
  * MeanCIn() gives the required samplesize to obtain a confidence interval 
    of a given width.
  * Rank() is added at the expense of DenseRank() using a fast implementation in 
    data.table, that allows ranking based on multiple columns. 
  * %::% does the same as %:% but in greedy mode, say using the last match instead
    of the first one.
  * For given dates, YearDays() and MonthDays() return the number of days in the 
    year, or in the month respectively.

UPDATED FUNCTIONS:
  * RevCode() has been extended to process factors and logicals too. 
  * BarText() will support offset by now. It also gets a new argument pos, 
    which replaces the old one.
  
BUGFIXES:
  * TMod() will not insert empty columns, when results are output to Word.
  * Hmean() will return NA for the confidence intervals in case we encounter
    negative values. This was promised so in the help file, but never delivered.
    (Credits to David R. Weise)
  * StrExtractBetween() would have rejected to extract parts between two identical
    characters.
  * Quantile(), and in consequence Median(), would not have treated missings correctly.
  * QuantileCI() will handle multiple probs now and respect coverage for one 
    sided intervals (Credits to Alexander Ploner).




DescTools 0.99.40 (2021-02-03)