@@ -32,7 +32,7 @@ export(
 "PairApply","ParseFormula","ParseSASDatalines","CorPart","PasswordDlg","pBenf","PearsonTest",
 "PercTable",
 "Permn","Phi","plot.bagplot","plot.Conf","plot.Lc","plot.Lclist","plot.PostHocTest","PlotACF","PlotArea","PlotBag","PlotBagPairs",
-"PlotBubble","PlotCandlestick","PlotCirc","PlotCorr",
+"PlotBubble","PlotCandlestick","PlotCirc","PlotCorr","ABCCoords","Bg",
 
 "PlotDot","PlotDotCI","PlotFaces","PlotFun","PlotGACF","PlotCashFlow","PlotLinesA","PlotMarDens","PlotMonth","PlotMultiDens","PlotPolar","PlotPyramid","PlotQQ","PlotTernary","PlotTreemap",
 "PlotVenn","PlotViolin","PlotWeb","PoissonCI","PolarGrid","PolToCart","PostHocTest","power.chisq.test","PpAddSlide","PpPlot","PpText","Prec","pRevGumbel","Primes","print.Assocs","print.Conf","print.CorPolychor","print.DunnTest","print.Freq","print.HoeffD","print.ICC","print.mtest","print.PostHocTest",
@@ -95,7 +95,7 @@ importFrom("data.table", "frankv", "frank")
 importFrom("graphics", "abline", "arrows", "axTicks", "axis", "barplot", "box", "boxplot", "clip", "close.screen", "dotchart", "frame", "grid", "hist", "identify", "image", "layout", "legend", "lines", "locator", "matlines", "matplot", "mosaicplot", "mtext", "pairs", "par",
            "plot", "plot.design", "plot.new", "plot.window", "points", "polygon", "rect", "screen", "segments", "split.screen", "strheight", "strwidth", "symbols", "text", "title",
            "grconvertX", "grconvertY")
-importFrom("grDevices", "chull", "col2rgb", "colorRampPalette", "colors", "dev.new", "dev.copy", "dev.cur", "dev.flush", "dev.hold", "dev.list", "dev.off", "dev.set", "gray.colors", "heat.colors", "rainbow", "rgb", "rgb2hsv", "xy.coords", "bitmap", "jpeg", "pdf", "png", "postscript", "tiff","adjustcolor")
+importFrom("grDevices", "chull", "col2rgb", "colorRampPalette", "colors", "dev.new", "dev.copy", "dev.cur", "dev.flush", "dev.hold", "dev.list", "dev.off", "dev.set", "gray.colors", "heat.colors", "rainbow", "rgb", "rgb2hsv", "xy.coords", "bitmap", "jpeg", "pdf", "png", "postscript", "tiff","adjustcolor", "dev.size")
 importFrom("methods", "is", "slot", "slotNames")
 importFrom("utils", "capture.output", "combn", "head", "help.search", "ls.str", "lsf.str", "memory.limit", "object.size", "read.table", "select.list", "sessionInfo", "stack", "str", "tail",
            "write.table", "browseURL","getParseData","find", "getAnywhere")
