@@ -7,6 +7,9 @@ DescTools 0.99.42 (2021-06-09)
 NEW FUNCTIONS ADDED:
   * PlotDotCI() is a convenience interface for PlotDot() to plot group-wise 
     confidence intervals.
+  * Bg() paints the background of a base R plot.
+  * ABCCoords() returns the coordinates for literal positions as "bottomright",
+    "topleft", etc..
 
 UPDATED FUNCTIONS:
   * AUC() has been gently revised.  (...but can't be published before package 
